<resources>
    <string name="app_name">MyRestaurant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Carro</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Carta</string>
    <string name="menu_slideshow">Pedidos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_restaurante">Logo del Restaurante</string>
    <string name="contrase_a">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="repite_la_contrase_a">Repita la Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="email">Email</string>
    <string name="volver">Volver</string>
    <string name="registrarse">Registrarse</string>
    <string name="visitas">Historial de Visitas</string>
    <string name="pedidos">Historial de Pedidos</string>
    <string name="opiniones">Opiniones</string>
    <string name="mensajes">Mensajes</string>
    <string name="settings">Settings</string>
    <string name="default_price">3.99</string>
    <string name="plato_defecto">Plato Defecto</string>
    <string name="valorar_plato">Valorar Plato</string>
    <string name="agregar_al_pedido">Agregar al Pedido</string>
    <string name="picante">Picante</string>
    <string name="contiene_lactosa">Contiene Lactosa</string>
    <string name="contiene_gluten">Contiene Gluten</string>
    <string name="no_vegano">No Vegano</string>
    <string name="plato_detalles">Plato Detalle</string>
    <string name="completar_pedido">Completar Pedido</string>
    <string name="datetimeFormat">dd-MM-YYYY hh:mm</string>
</resources>