<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivRegistroLogo"
                android:layout_width="263dp"
                android:layout_height="261dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/logo_restaurante"
                android:src="@mipmap/ic_restaurant_logo" />

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/tilUsuarioRegistro"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/border"
                android:baselineAligned="false"
                android:hint="@string/email"
                android:textColorHint="@color/red"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp"
                app:boxStrokeColor="@color/purple_700"
                app:boxStrokeWidth="1dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUsuarioLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp"
                    android:singleLine="true"
                    android:textColor="@color/red"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassRegistro"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/border"
                android:hint="@string/contrase_a"
                android:textColorHint="@color/red"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp"
                app:boxStrokeColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textPassword"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp"
                    android:singleLine="true"
                    android:textColor="@color/red"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="5dp"
                android:paddingStart="10dp">

                <Button
                    android:id="@+id/btnRegistroLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:text="@string/registrarse"
                    android:textColor="@color/red"
                    app:background="@drawable/border"
                    app:backgroundTint="@color/white"
                    app:cornerRadius="25dp"
                    app:strokeColor="@color/red"
                    app:strokeWidth="2dp" />

                <Button
                    android:id="@+id/btnEntrarLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:text="@string/entrar"
                    android:textColor="@color/white"
                    app:cornerRadius="25dp"
                    app:strokeColor="#00FFFFFF"
                    app:strokeWidth="0dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnMapa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"

                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/architects_daughter_font"
                    android:foregroundGravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text="¿Dónde Estamos?"
                    android:textColor="@color/red"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:background="@color/white"
                    app:backgroundTint="@color/white"
                    app:strokeColor="#7C7C7C"
                    app:strokeWidth="1dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>